--- a/iso9001/aboutUs.html
+++ b/iso9001/aboutUs.html
@@ -93,7 +93,7 @@
                 <div class="mb-16 flex flex-col md:flex-row items-center gap-8 md:gap-12 lecturer-card-hover bg-white rounded-xl p-6 md:p-8 shadow-md">
                     <div class="w-full md:w-1/4 lg:w-1/5">
                         <div class="relative">
-                            <img src="./yaosir.jpg" alt="首席顧問 姚志強" class="w-full h-auto rounded-lg shadow-md object-cover">
+                            <img src="./yaosir.jpeg" alt="首席顧問 姚志強" class="w-full h-auto rounded-lg shadow-md object-cover">
                             <div class="absolute -bottom-3 -right-3 bg-primary text-white rounded-full w-12 h-12 flex items-center justify-center shadow-lg">
                                 <i class="fa fa-award text-xl"></i>
                             </div>
@@ -142,7 +142,7 @@
                 <div class="flex flex-col md:flex-row-reverse items-center gap-8 md:gap-12 lecturer-card-hover bg-white rounded-xl p-6 md:p-8 shadow-md">
                     <div class="w-full md:w-1/4 lg:w-1/5">
                         <div class="relative">
-                            <img src="./misslin.jpeg" alt="首席學術顧問 黃淑華" class="w-full h-auto rounded-lg shadow-md object-cover">
+                            <img src="./misslin.jpeg" alt="首席學術顧問 阮婧" class="w-full h-auto rounded-lg shadow-md object-cover">
                             <div class="absolute -bottom-3 -right-3 bg-primary text-white rounded-full w-12 h-12 flex items-center justify-center shadow-lg">
                                 <i class="fa fa-book text-xl"></i>
                             </div>
@@ -151,7 +151,7 @@
                     <div class="w-full md:w-3/4 lg:w-4/5">
                         <div class="flex flex-col md:flex-row md:justify-between md:items-center gap-4 mb-4">
                             <div>
-                                <h3 class="text-2xl md:text-3xl font-bold text-primary">黃淑華</h3>
+                                <h3 class="text-2xl md:text-3xl font-bold text-primary">阮婧</h3>
                                 <p class="text-gray-600 text-lg">首席學術顧問 | 上海財經大學教授</p>
                             </div>
                             <div class="flex gap-3">
@@ -191,7 +191,7 @@
                 <div class="mb-16 flex flex-col md:flex-row-reverse items-center gap-8 md:gap-12 lecturer-card-hover bg-white rounded-xl p-6 md:p-8 shadow-md">
                     <div class="w-full md:w-1/4 lg:w-1/5">
                         <div class="relative">
-                            <img src="./missyao.jpeg" alt="首席講師 姚聰" class="w-full h-auto rounded-lg shadow-md object-cover">
+                            <img src="./tongsir.jpeg" alt="首席講師 童林" class="w-full h-auto rounded-lg shadow-md object-cover">
                             <div class="absolute -bottom-3 -right-3 bg-secondary text-white rounded-full w-12 h-12 flex items-center justify-center shadow-lg">
                                 <i class="fa fa-thumbs-up text-xl"></i>
                             </div>
@@ -200,7 +200,7 @@
                     <div class="w-full md:w-3/4 lg:w-4/5">
                         <div class="flex flex-col md:flex-row md:justify-between md:items-center gap-4 mb-4">
                             <div>
-                                <h3 class="text-2xl md:text-3xl font-bold text-primary">姚聰</h3>
+                                <h3 class="text-2xl md:text-3xl font-bold text-primary">童林</h3>
                                 <p class="text-gray-600 text-lg">首席講師 | 中小企業ISO實戰專家</p>
                             </div>
                             <div class="flex gap-3">
@@ -241,7 +241,7 @@
                 <div class="mb-16 flex flex-col md:flex-row items-center gap-8 md:gap-12 lecturer-card-hover bg-white rounded-xl p-6 md:p-8 shadow-md">
                     <div class="w-full md:w-1/4 lg:w-1/5">
                         <div class="relative">
-                            <img src="./liesir.jpg" alt="首席技術顧問 陳柏翰" class="w-full h-auto rounded-lg shadow-md object-cover">
+                            <img src="./zhongsir.jpeg" alt="首席技術顧問 鍾銀高" class="w-full h-auto rounded-lg shadow-md object-cover">
                             <div class="absolute -bottom-3 -right-3 bg-accent text-white rounded-full w-12 h-12 flex items-center justify-center shadow-lg">
                                 <i class="fa fa-laptop text-xl"></i>
                             </div>
@@ -250,7 +250,7 @@
                     <div class="w-full md:w-3/4 lg:w-4/5">
                         <div class="flex flex-col md:flex-row md:justify-between md:items-center gap-4 mb-4">
                             <div>
-                                <h3 class="text-2xl md:text-3xl font-bold text-primary">李柏翰</h3>
+                                <h3 class="text-2xl md:text-3xl font-bold text-primary">鍾銀高</h3>
                                 <p class="text-gray-600 text-lg">首席技術顧問 | 資安+管理雙棲專家</p>
                             </div>
                             <div class="flex gap-3">
@@ -292,7 +292,7 @@
                 <div class="mb-16 flex flex-col md:flex-row items-center gap-8 md:gap-12 lecturer-card-hover bg-white rounded-xl p-6 md:p-8 shadow-md">
                     <div class="w-full md:w-1/4 lg:w-1/5">
                         <div class="relative">
-                            <img src="./wansir.jpg" alt="首席顧問 王明遠" class="w-full h-auto rounded-lg shadow-md object-cover">
+                            <img src="./missden.jpeg" alt="首席顧問 鄧玉婷" class="w-full h-auto rounded-lg shadow-md object-cover">
                             <div class="absolute -bottom-3 -right-3 bg-primary text-white rounded-full w-12 h-12 flex items-center justify-center shadow-lg">
                                 <i class="fa fa-award text-xl"></i>
                             </div>
@@ -301,7 +301,7 @@
                     <div class="w-full md:w-3/4 lg:w-4/5">
                         <div class="flex flex-col md:flex-row md:justify-between md:items-center gap-4 mb-4">
                             <div>
-                                <h3 class="text-2xl md:text-3xl font-bold text-primary">王明遠</h3>
+                                <h3 class="text-2xl md:text-3xl font-bold text-primary">鄧玉婷</h3>
                                 <p class="text-gray-600 text-lg">首席顧問 | ISO國際註冊高級審核員</p>
                             </div>
                             <div class="flex gap-3">
