--- a/iso9001/aboutUs.html
+++ b/iso9001/aboutUs.html
@@ -152,7 +152,7 @@
                         <div class="flex flex-col md:flex-row md:justify-between md:items-center gap-4 mb-4">
                             <div>
                                 <h3 class="text-2xl md:text-3xl font-bold text-primary">阮婧</h3>
-                                <p class="text-gray-600 text-lg">首席學術顧問 | 上海財經大學教授</p>
+                                <p class="text-gray-600 text-lg">首席學術顧問 </p>
                             </div>
                             <div class="flex gap-3">
                                 <a href="#" class="w-10 h-10 rounded-full bg-primary/10 text-primary flex items-center justify-center hover:bg-primary hover:text-white transition-colors">
@@ -164,13 +164,13 @@
                             </div>
                         </div>
                         <div class="mb-6 text-gray-700 space-y-3">
-                            <p>上海財經大學博士，現任大學工業管理系教授，從事ISO國際標準研究與教學工作20年，長期參與我國ISO管理體系標準的製定與修訂工作。</p>
+                            <p>武漢科技大學，從事ISO國際標準研究與教學工作15年，長期參與我國ISO管理體系標準的製定與修訂工作。</p>
                             <p>發表學術論文50餘篇，主持12項科技部研究課題，講課風格邏輯嚴謹，兼具理論深度與實務指導性。</p>
                         </div>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-sm">
                             <div class="bg-neutral rounded-lg p-3 flex items-center gap-2">
                                 <i class="fa fa-university text-primary"></i>
-                                <span>高校資深教授</span>
+                                <span>資深講師</span>
                             </div>
                             
                             <div class="bg-neutral rounded-lg p-3 flex items-center gap-2">
@@ -191,7 +191,7 @@
                 <div class="mb-16 flex flex-col md:flex-row-reverse items-center gap-8 md:gap-12 lecturer-card-hover bg-white rounded-xl p-6 md:p-8 shadow-md">
                     <div class="w-full md:w-1/4 lg:w-1/5">
                         <div class="relative">
-                            <img src="./tongsir.jpeg" alt="首席講師 童林" class="w-full h-auto rounded-lg shadow-md object-cover">
+                            <img src="./tongsir.jpeg" alt="首席講師 童林 " class="w-full h-auto rounded-lg shadow-md object-cover">
                             <div class="absolute -bottom-3 -right-3 bg-secondary text-white rounded-full w-12 h-12 flex items-center justify-center shadow-lg">
                                 <i class="fa fa-thumbs-up text-xl"></i>
                             </div>
@@ -263,7 +263,7 @@
                             </div>
                         </div>
                         <div class="mb-6 text-gray-700 space-y-3">
-                            <p>擁有資訊工程碩士與企業管理碩士雙學位，兼具10年資訊技術研發經驗與12年ISO管理體系輔導經驗，是業內少見的「技術+管理」雙棲專家。</p>
+                            <p>江西理工大學，兼具10年資訊技術研發經驗與12年ISO管理體系輔導經驗，是業內少見的「技術+管理」雙棲專家。</p>
                             <p>在ISO 27001資訊安全管理領域，曾協助數十家科技企業、金融機構建立完善資安防護體系；在ISO 9001品質管理領域，擅長結合ERP/CRM工具實現流程自動化，提供「ISO認證+數位化升級」一站式解決方案。</p>
                         </div>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-sm">
@@ -314,8 +314,8 @@
                             </div>
                         </div>
                         <div class="mb-6 text-gray-700 space-y-3">
-                            <p>畢業於華東師範大學工業工程與管理博士班，擁有ISO 9001、ISO 14001、ISO 45001、ISO 27001等多項國際頂級審核員資格，曾任某跨國認證機構亞太區技術總監。</p>
-                            <p>過去25年間，累計輔導超過800家大中小型企業通過國際ISO認證，涵蓋製造業、電子業、服務業、醫療機構等多個領域，其中包含100餘家上市上櫃企業，輔導案例多次獲選為「亞太區最佳品質管理典範」。</p>
+                            <p>畢業於湖北交通大學，擁有ISO 9001、ISO 14001、ISO 45001、ISO 27001等多項國際頂級審核員資格，曾任某跨國認證機構亞太區技術總監。</p>
+                            <p>過去6年間，累計輔導超過80家大中小型企業通過國際ISO認證，涵蓋製造業、電子業、服務業、醫療機構等多個領域，其中包含100餘家上市上櫃企業，輔導案例多次獲選為「亞太區最佳品質管理典範」。</p>
                         </div>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-sm">
                             <div class="bg-neutral rounded-lg p-3 flex items-center gap-2">
@@ -325,11 +325,11 @@
                             
                             <div class="bg-neutral rounded-lg p-3 flex items-center gap-2">
                                 <i class="fa fa-graduation-cap text-primary"></i>
-                                <span>大學EMBA客座講師</span>
+                                <span>優秀講師</span>
                             </div>
                             <div class="bg-neutral rounded-lg p-3 flex items-center gap-2">
                                 <i class="fa fa-globe text-primary"></i>
-                                <span>多國講學經驗</span>
+                                <span>豐富的講學經驗</span>
                             </div>
                         </div>
                     </div>
