--- a/iso9001/aboutUs.html
+++ b/iso9001/aboutUs.html
@@ -214,7 +214,7 @@
                         </div>
                         <div class="mb-6 text-gray-700 space-y-3">
                             <p>從基層品質管理員一路成長為資深ISO輔導專家，深耕中小企業ISO認證領域10年，深知中小企業在申請認證時的痛點與難題——預算有限、人手不足、流程不規範。</p>
-                            <p>不同於學院派講師，姚講師擅長用「白話文」拆解艱澀的ISO條文，將複雜的管理體系化為「一步一腳印」的可執行步驟，輔導過的中小企業認證通過率高達98%，且客戶回頭率超過70%，被親切稱為「ISO認證平民專家」。</p>
+                            <p>不同於學院派講師，童講師擅長用「白話文」拆解艱澀的ISO條文，將複雜的管理體系化為「一步一腳印」的可執行步驟，輔導過的中小企業認證通過率高達98%，且客戶回頭率超過70%，被親切稱為「ISO認證平民專家」。</p>
                         </div>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-sm">
                             <div class="bg-neutral rounded-lg p-3 flex items-center gap-2">
